--- a/index.html
+++ b/index.html
@@ -1,70 +1,26 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>LLM Tool Chat</title>
+  <meta charset="UTF-8">
+  <title>LLM Agent POC</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body class="p-3">
-  <div class="container">
-    <h3>LLM Conversation</h3>
-    <div id="chat" class="border rounded p-2 mb-2" style="height:300px;overflow-y:auto;"></div>
-    <div class="input-group">
-      <input id="userInput" class="form-control" placeholder="Type your message..."/>
-      <button id="sendBtn" class="btn btn-primary">Send</button>
+<body class="bg-light">
+  <div class="container py-4">
+    <h2 class="mb-4">🤖 LLM Agent POC</h2>
+
+    <div id="chat-window" class="border rounded p-3 bg-white mb-3" style="height:400px; overflow-y:auto;">
+      <!-- Chat messages will appear here -->
     </div>
-    <div id="alerts" class="mt-2"></div>
+
+    <div class="input-group">
+      <input type="text" id="user-input" class="form-control" placeholder="Ask me anything..." />
+      <button id="send-btn" class="btn btn-primary">Send</button>
+    </div>
+
+    <div id="alert-container" class="mt-3"></div>
   </div>
 
-  <script>
-    const chat = document.getElementById("chat");
-    const alerts = document.getElementById("alerts");
-    let messages = [];
-
-    function addMessage(role, text) {
-      const div = document.createElement("div");
-      div.innerHTML = `<b>${role}:</b> ${text}`;
-      chat.appendChild(div);
-      chat.scrollTop = chat.scrollHeight;
-    }
-
-    function showError(msg) {
-      alerts.innerHTML = `<div class="alert alert-danger">${msg}</div>`;
-    }
-
-    async function sendMessage() {
-      const input = document.getElementById("userInput");
-      const userMsg = input.value.trim();
-      if (!userMsg) return;
-      addMessage("User", userMsg);
-      messages.push({ role: "user", content: userMsg });
-      input.value = "";
-
-      try {
-        const resp = await fetch("/api/tools", {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({ tool: "chat", messages })
-        });
-        const data = await resp.json();
-
-        if (data.error) {
-          showError(data.error);
-          return;
-        }
-
-        const reply = data.choices?.[0]?.message?.content || "[no reply]";
-        addMessage("Assistant", reply);
-        messages.push({ role: "assistant", content: reply });
-
-      } catch (err) {
-        showError(err.message);
-      }
-    }
-
-    document.getElementById("sendBtn").onclick = sendMessage;
-    document.getElementById("userInput").addEventListener("keydown", e => {
-      if (e.key === "Enter") sendMessage();
-    });
-  </script>
+  <script src="script.js"></script>
 </body>
 </html>
